Fix for long urls overflowing the box (and pushing buttons out of reach). Bit of a hack having to for the width, but only way to force word-wrap in some browsers.
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/trunk@2262 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1830,6 +1830,15 @@ table.simple td {
 	text-align: center;
 }
 
+#packItems td.remote {
+	width: 470px;
+	max-width: 470px;
+}
+
+#packItems td.remote p.longurl {
+	word-wrap: break-word;
+}
+
 #packItems .inner {
 	color: #333333;
 	margin: 0.3em 0 0 0.3em;
